# backend-decision-lab

./: .env.example  .gitignore  README.md  docker-compose.scale.yml  docker-compose.yml
.github/workflows/: build.yml
benchmarks/: cost_model.py  deploy_metrics.sh  generate_report.py  pricing.json  report.sh  run-all.sh  scale.sh
docs/: CONTRACT.md
implementations/go-gin/: Dockerfile  README.md  go.mod  main.go
implementations/node-fastify/: Dockerfile  README.md  package.json  server.js
implementations/php-laravel/: .dockerignore  Dockerfile  README.md
implementations/php-laravel/app/Http/Controllers/: BenchmarkController.php
implementations/php-laravel/config/: database.php
implementations/php-laravel/routes/: web.php
implementations/python-fastapi/: Dockerfile  README.md  main.py  requirements.txt
implementations/rust-axum/: Cargo.toml  Dockerfile  README.md
implementations/rust-axum/src/: main.rs
infrastructure/monitoring/grafana/dashboards/: k6-load-test.json
infrastructure/monitoring/grafana/provisioning/dashboards/: provider.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/postgres/: init.sql
k6/: concurrency.js  cpu.js  database.js  health.js  json.js
reports/example/: README.md  cost.json  cost.md  deploy.json  deploy.md  report.json  report.md  resources.json  scaling.json  scaling.md
