[package]
name = "rust-axum-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-axum-benchmark"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
